--- a/package.json
+++ b/package.json
@@ -7,5 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "lerna": "2.0.0-beta.7"
+  },
+  "private": true,
+  "dependencies": {
+    "lerna": "2.0.0-beta.7"
+  }
 }
