--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "cz-conventional-changelog": "^1.1.6",
     "lerna": "2.0.0-beta.7"
   },
   "private": true,
   "dependencies": {
     "lerna": "2.0.0-beta.7"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
