--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.8.0",
+    "babel-loader": "^6.2.4",
     "css-loader": "^0.23.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.0"
