--- a/packages/component-c/package.json
+++ b/packages/component-c/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "lodash": "*"
+  },
   "author": "",
   "license": "ISC"
 }
