--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "lerna bootstrap"
+    "postinstall": "./node_modules/.bin/lerna bootstrap",
+    "release": "./node_modules/.bin/lerna publish --canary"
   },
   "author": "",
   "license": "ISC",
