--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,8 +1,10 @@
 image: node:5.11.0
 pipelines:
-  default:
+  master:
     - step:
         script:
           - npm --version
           - npm install
           - npm run release
+          - expect "Are you sure you want to publish the above changes?"
+          - send "y"
