--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "./node_modules/.bin/lerna bootstrap",
-    "release": "./node_modules/.bin/lerna publish --canary --force-publish"
+    "release": "./node_modules/.bin/lerna publish --canary --confirm"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "cz-conventional-changelog": "^1.1.6",
-    "lerna": "2.0.0-beta.9"
+    "lerna": "jpnelson/lerna#83e8dec93"
   },
   "private": true,
   "config": {
