--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,4 +5,5 @@ pipelines:
         script:
           - npm --version
           - npm install
+          - npm set //registry.npmjs.org/:_authToken=$NPM_TOKEN
           - npm run release
