--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"No test specified\" && exit 0",
     "postinstall": "./node_modules/.bin/lerna bootstrap",
     "release": "./node_modules/.bin/lerna publish --canary --confirm"
   },
