--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,7 +1,7 @@
 image: node:5.11.0
 pipelines:
   branches:
-    - master:
+    master:
       - step:
           script:
             - npm --version
