--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-core": "^6.8.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "camelcase": "^3.0.0",
     "css-loader": "^0.23.1",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
