--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "babel-preset-es2015": "^6.6.0",
     "camelcase": "^3.0.0",
     "css-loader": "^0.23.1",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-mocha": "^1.0.1",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "style-loader": "^0.13.1",
