--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "karma-mocha": "^1.0.1",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
+    "mocha": "^2.4.5",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.0"
   }
