Added karma plugins for chai and webpack

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "camelcase": "^3.0.0",
     "css-loader": "^0.23.1",
     "karma": "^0.13.22",
+    "karma-chai-plugins": "^0.7.0",
     "karma-chrome-launcher": "^1.0.1",
     "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.0.1",
+    "karma-webpack": "^1.7.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "mocha": "^2.4.5",
