--- a/packages/sean-button/package.json
+++ b/packages/sean-button/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "karma start ../../karma.conf.js"
+    "test": "karma start ../../karma.conf.js --single-run",
+    "test/watch": "karma start ../../karma.conf.js"
   },
   "author": "",
   "license": "ISC"
