--- a/packages/component-a/package.json
+++ b/packages/component-a/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"No tests specified\" && exit 0"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "release": {
+    "analyzeCommits": "semantic-release-lerna-analyzer"
+  }
 }
