--- a/packages/component-b/package.json
+++ b/packages/component-b/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"No tests specified\" && exit 0"
+    "test": "echo \"No tests specified\" && exit 0",
+    "semantic-release": "../../node_modules/.bin/semantic-release pre && npm publish && ../../node_modules/.bin/semantic-release post"
   },
+  "repository": "git@bitbucket.org:atlassian/atlaskit-spike.git",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "release": {
+    "analyzeCommits": "semantic-release-lerna-analyzer"
+  }
 }
