--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -4,8 +4,7 @@ pipelines:
     master:
       - step:
           script:
-            - npm --version
-            - npm install
+            - npm test
             - npm set //registry.npmjs.org/:_authToken=$NPM_TOKEN
             - npm run release
   default:
