--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint .",
     "test": "lerna run test",
     "postinstall": "lerna bootstrap",
     "release": "lerna publish --canary --confirm"
@@ -16,24 +17,33 @@
     "babel-preset-es2015": "^6.6.0",
     "camelcase": "^3.0.0",
     "css-loader": "^0.23.1",
+    "cz-conventional-changelog": "^1.1.6",
+    "eslint": "^2.10.2",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.8.0",
+    "eslint-plugin-jsx-a11y": "^1.2.0",
+    "eslint-plugin-mocha": "^2.2.0",
+    "eslint-plugin-react": "^5.1.1",
     "karma": "^0.13.22",
     "karma-chai-plugins": "^0.7.0",
     "karma-chrome-launcher": "^1.0.1",
     "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.0.1",
     "karma-webpack": "^1.7.0",
+    "lerna": "jpnelson/lerna#8c0e5a44",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "mocha": "^2.4.5",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.0",
-    "cz-conventional-changelog": "^1.1.6",
-    "lerna": "jpnelson/lerna#8c0e5a44"
+    "webpack": "^1.13.0"
   },
   "private": true,
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "engines": {
+    "node": ">=6.1"
   }
 }
