--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -12,4 +12,7 @@ pipelines:
   default:
     - step:
         script:
+          - npm install
+          - npm run lint
+          - npm run dist
           - npm test
