--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dist": "lerna run prepublish",
     "lint": "eslint .",
-    "test": "lerna run test",
     "postinstall": "lerna bootstrap",
-    "release": "lerna publish --canary --confirm"
+    "release": "lerna publish --canary --confirm",
+    "test": "lerna run test"
   },
   "author": "",
   "license": "ISC",
