--- a/packages/sean-button/package.json
+++ b/packages/sean-button/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "karma start ../../karma.conf.js --single-run",
-    "test/watch": "karma start ../../karma.conf.js"
+    "test": "../../node_modules/.bin/karma start ../../karma.conf.js --single-run",
+    "test/watch": "../../node_modules/.bin/karma start ../../karma.conf.js",
+    "prepublish": "../../node_modules/.bin/webpack"
   },
   "author": "",
   "license": "ISC"
