chore(build): Working on testing semantic release publishing
affects: atlaskit-component-a

--- a/packages/component-a/package.json
+++ b/packages/component-a/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "release": {
-    "analyzeCommits": "semantic-release-lerna-analyzer"
+    "analyzeCommits": "semantic-release-lerna-analyzer",
+    "verifyConditions": [],
+    "debug": false
   }
 }
