--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,7 +9,7 @@ pipelines:
             - npm test
             - npm set //registry.npmjs.org/:_authToken=$NPM_TOKEN
             - npm run release
-            - curl -d '{"color":"green","message":"(package) Released new AtlasKit canary","notify":false,"message_format":"text"}' -H 'Content-Type: application/json' https://atlassian.hipchat.com/v2/room/2709310/notification?auth_token=$HIPCHAT_ADG3DEV_AUTH_TOKEN
+            - ./build/bin/hipchat_message "(package) Released new AtlasKit canary"
   default:
     - step:
         script:
