Revert "chore(build): HipChat package unicode"
This reverts commit 84cca6b5be15f8383368884601d359b01a665359.

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,7 +9,7 @@ pipelines:
             - npm test
             - npm set //registry.npmjs.org/:_authToken=$NPM_TOKEN
             - npm run release
-            - ./build/bin/hipchat_message.sh "\u1F4E6 Released new AtlasKit canary"
+            - ./build/bin/hipchat_message.sh "📦Released new AtlasKit canary"
   default:
     - step:
         script:
