--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,9 @@
 {
   "rules": {
     "indent": [2, 2],
-    "quotes": [2, "single"],
     "linebreak-style": [2, "unix"],
+    "mocha/no-exclusive-tests": 2,
+    "quotes": [2, "single"],
     "semi": [2, "always"]
   },
   "env": {
@@ -11,14 +12,9 @@
     "browser": true
   },
   "extends": "eslint:recommended",
-  "globals": {
-    "afterEach": true,
-    "assert": true,
-    "beforeEach": true,
-    "describe": true,
-    "expect": true,
-    "it": true
-  },
+  "plugins": [
+    "mocha"
+  ],
   "ecmaFeatures": {
     "modules": true
   },
