--- a/packages/joschable-header/package.json
+++ b/packages/joschable-header/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "sean-button",
+  "name": "joschable-header",
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "../../node_modules/.bin/karma start ../../karma.conf.js --single-run",
-    "test/watch": "../../node_modules/.bin/karma start ../../karma.conf.js",
-    "prepublish": "../../node_modules/.bin/webpack"
+    "test/watch": "../../node_modules/.bin/karma start ../../karma.conf.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "sean-button": "^0.0.1"
+  }
 }
