--- a/packages/joshable-content/package.json
+++ b/packages/joshable-content/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "joschable-header",
+  "name": "joshable-content",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "sean-button": "^2.0.0"
+    "joschable-header": "^1.0.0",
+    "sean-button": "^3.0.0"
   }
 }
