--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -16,4 +16,4 @@ pipelines:
           - npm install
           - npm run lint
           - npm run dist
-          - npm test --sauce
+          - npm test
