--- a/packages/sean-button/package.json
+++ b/packages/sean-button/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "../../node_modules/.bin/karma start ../../karma.conf.js --single-run",
+    "test": "../../node_modules/.bin/karma start ../../karma.conf.js --single-run --sauce",
     "test/watch": "../../node_modules/.bin/karma start ../../karma.conf.js",
     "prepublish": "../../node_modules/.bin/webpack"
   },
