--- a/packages/joshable-content/package.json
+++ b/packages/joshable-content/package.json
@@ -7,6 +7,10 @@
     "test": "../../node_modules/.bin/karma start ../../karma.conf.js --single-run",
     "test/watch": "../../node_modules/.bin/karma start ../../karma.conf.js"
   },
+  "files": [
+    "src",
+    "dist"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
