--- a/packages/sean-button/package.json
+++ b/packages/sean-button/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sean-button",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "description": "",
   "main": "src/index.js",
   "scripts": {
@@ -8,6 +8,10 @@
     "test/watch": "../../node_modules/.bin/karma start ../../karma.conf.js",
     "prepublish": "../../node_modules/.bin/webpack"
   },
+  "files": [
+    "src",
+    "dist"
+  ],
   "author": "",
   "license": "ISC"
 }
