--- a/packages/sean-button/package.json
+++ b/packages/sean-button/package.json
@@ -2,7 +2,7 @@
   "name": "sean-button",
   "version": "3.1.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "dist/bundle.js",
   "scripts": {
     "test": "../../node_modules/.bin/karma start ../../karma.conf.js --single-run --sauce",
     "test/watch": "../../node_modules/.bin/karma start ../../karma.conf.js",
