--- a/packages/joshable-content/package.json
+++ b/packages/joshable-content/package.json
@@ -5,11 +5,12 @@
   "main": "dist/bundle.js",
   "scripts": {
     "test": "../../node_modules/.bin/karma start ../../karma.conf.js --single-run",
-    "test/watch": "../../node_modules/.bin/karma start ../../karma.conf.js"
+    "test/watch": "../../node_modules/.bin/karma start ../../karma.conf.js",
+    "clean": "rm -rf node_modules",
+    "prepublish": "../../node_modules/.bin/webpack"
   },
   "files": [
-    "src",
-    "dist"
+    "src"
   ],
   "author": "",
   "license": "ISC",
