--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dist": "./node_modules/.bin/lerna run prepublish",
     "lint": "eslint .",
     "postinstall": "./node_modules/.bin/lerna bootstrap && validate-commit-msg",
-    "release": "./node_modules/.bin/lerna-semantic-release",
+    "release": "lerna run release",
     "test": "lerna run test",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
