--- a/packages/component-a/package.json
+++ b/packages/component-a/package.json
@@ -1,11 +1,11 @@
 {
   "name": "atlaskit-component-a",
-  "version": "0.14.0",
+  "version": "0.25.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"No tests specified\" && exit 0",
-    "semantic-release": "../../node_modules/.bin/semantic-release pre && npm publish && ../../node_modules/.bin/semantic-release post"
+    "release": "lerna-semantic-release"
   },
   "repository": "git@bitbucket.org:atlassian/atlaskit-spike.git",
   "author": "",
