--- a/packages/component-c/package.json
+++ b/packages/component-c/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"No tests specified\" && exit 0",
-    "semantic-release": "../../node_modules/.bin/semantic-release pre && npm publish && ../../node_modules/.bin/semantic-release post"
+    "release": "lerna-semantic-release"
   },
   "dependencies": {
     "lodash": "*"
