--- a/packages/component-c/package.json
+++ b/packages/component-c/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"No tests specified\" && exit 0",
-    "release": "lerna-semantic-release"
+    "pre-release": "lerna-semantic-release pre"
   },
   "dependencies": {
     "lodash": "*"
