--- a/packages/sean-button/package.json
+++ b/packages/sean-button/package.json
@@ -7,7 +7,7 @@
     "test": "../../node_modules/.bin/karma start ../../karma.conf.js --single-run",
     "test/watch": "../../node_modules/.bin/karma start ../../karma.conf.js",
     "prepublish": "../../node_modules/.bin/webpack",
-    "release": "lerna-semantic-release"
+    "pre-release": "lerna-semantic-release pre"
   },
   "author": "",
   "license": "ISC"
