--- a/packages/sean-button/package.json
+++ b/packages/sean-button/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "dist/bundle.js",
   "scripts": {
-    "test": "../../node_modules/.bin/karma start ../../karma.conf.js --single-run --sauce",
-    "test/watch": "../../node_modules/.bin/karma start ../../karma.conf.js",
     "clean": "rm -rf node_modules",
-    "prepublish": "../../node_modules/.bin/webpack --min"
+    "prepublish": "../../node_modules/.bin/webpack --config ../../webpack.config.js --min",
+    "test": "../../node_modules/.bin/karma start ../../karma.conf.js --single-run",
+    "test-watch": "../../node_modules/.bin/karma start ../../karma.conf.js"
   },
   "files": [
     "dist"
