--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "clean": "rm -rf node_modules && ./node_modules/.bin/lerna exec -- rm -rf node_modules",
     "dist": "./node_modules/.bin/lerna run prepublish",
     "lint": "eslint .",
     "postinstall": "./node_modules/.bin/lerna bootstrap && validate-commit-msg",
+    "prepublish/single": "./build/bin/prepublish.single.sh",
     "release": "./node_modules/.bin/lerna publish --canary --confirm",
-    "test": "./node_modules/.bin/lerna run test",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "test": "./build/bin/test.sh",
+    "test/saucelabs": "./build/bin/test.saucelabs.sh",
+    "test/single": "./build/bin/test.single.sh",
+    "test/single/watch": "./build/bin/test.single.watch.sh",
+    "test/single/saucelabs": "./build/bin/test.single.saucelabs.sh",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "validate": "npm ls"
   },
   "author": "",
   "license": "ISC",
@@ -32,7 +39,7 @@
     "karma-chrome-launcher": "^1.0.1",
     "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.0.1",
-    "karma-saucelabs-launcher": "0.0.0",
+    "karma-sauce-launcher": "1.0.0",
     "karma-webpack": "^1.7.0",
     "lerna": "joscha/lerna#atlaskit",
     "less": "^2.7.1",
