--- a/packages/joschable-header/package.json
+++ b/packages/joschable-header/package.json
@@ -4,10 +4,7 @@
   "description": "",
   "main": "dist/bundle.js",
   "scripts": {
-    "clean": "rm -rf node_modules",
-    "prepublish": "../../node_modules/.bin/webpack --config ../../webpack.config.js --min",
-    "test": "../../node_modules/.bin/karma start ../../karma.conf.js --single-run",
-    "test-watch": "../../node_modules/.bin/karma start ../../karma.conf.js"
+    "prepublish": "cd .. && npm run prepublish/single joschable-header"
   },
   "files": [
     "src"
