--- a/packages/component-a/package.json
+++ b/packages/component-a/package.json
@@ -4,15 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"No tests specified\" && exit 0",
     "semantic-release": "../../node_modules/.bin/semantic-release pre && npm publish && ../../node_modules/.bin/semantic-release post"
   },
   "repository": "git@bitbucket.org:atlassian/atlaskit-spike.git",
   "author": "",
   "license": "ISC",
   "release": {
-    "analyzeCommits": "semantic-release-lerna-analyzer",
-    "verifyConditions": [],
-    "debug": false
+    "analyzeCommits": "semantic-release-lerna-analyzer"
   }
 }
