Fixed package.json files entry in joshable-content and joschable-header

--- a/packages/joshable-content/package.json
+++ b/packages/joshable-content/package.json
@@ -12,7 +12,7 @@
     "test/watch": "../../node_modules/.bin/karma start ../../karma.conf.js"
   },
   "files": [
-    "src"
+    "dist"
   ],
   "author": "",
   "license": "ISC",
