--- a/packages/joschable-header/package.json
+++ b/packages/joschable-header/package.json
@@ -1,6 +1,6 @@
 {
   "name": "joschable-header",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "",
   "main": "dist/bundle.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "prepublish": "cd .. && npm run prepublish/single joschable-header",
     "pre-release": "lerna-semantic-release pre",
     "test": "../../node_modules/.bin/karma start ../../karma.conf.js --single-run",
-    "test/watch": "../../node_modules/.bin/karma start ../../karma.conf.js",
+    "test/watch": "../../node_modules/.bin/karma start ../../karma.conf.js"
   },
   "files": [
     "dist"
