--- a/packages/joshable-content/package.json
+++ b/packages/joshable-content/package.json
@@ -4,12 +4,8 @@
   "description": "",
   "main": "dist/bundle.js",
   "scripts": {
-    "clean": "rm -rf node_modules",
-    "dev-server": "webpack-dev-server --bundle-deps",
     "prepublish": "cd .. && npm run prepublish/single joshable-content",
-    "pre-release": "lerna-semantic-release pre",
-    "test": "../../node_modules/.bin/karma start ../../karma.conf.js --single-run",
-    "test/watch": "../../node_modules/.bin/karma start ../../karma.conf.js"
+    "pre-release": "lerna-semantic-release pre"
   },
   "files": [
     "dist"
