chore: Added webpack field to component package.jsons

--- a/packages/joshable-content/package.json
+++ b/packages/joshable-content/package.json
@@ -3,6 +3,7 @@
   "version": "1.2.0",
   "description": "",
   "main": "dist/bundle.js",
+  "webpack": "src/index.js",
   "scripts": {
     "prepublish": "cd .. && npm run prepublish/single joshable-content",
     "pre-release": "lerna-semantic-release pre"
