--- a/packages/joschable-header/package.json
+++ b/packages/joschable-header/package.json
@@ -3,6 +3,7 @@
   "version": "1.4.0",
   "description": "",
   "main": "dist/bundle.js",
+  "webpack": "src/index.js",
   "scripts": {
     "prepublish": "cd .. && npm run prepublish/single joschable-header",
     "pre-release": "lerna-semantic-release pre"
