--- a/packages/sean-button/package.json
+++ b/packages/sean-button/package.json
@@ -3,6 +3,7 @@
   "version": "3.7.0",
   "description": "",
   "main": "dist/bundle.js",
+  "webpack": "src/index.js",
   "scripts": {
     "prepublish": "cd .. && npm run prepublish/single sean-button",
     "pre-release": "lerna-semantic-release pre"
