--- a/packages/joschable-header/package.json
+++ b/packages/joschable-header/package.json
@@ -1,6 +1,6 @@
 {
   "name": "joschable-header",
-  "version": "3.1.0",
+  "version": "3.2.0",
   "description": "",
   "main": "dist/bundle.js",
   "scripts": {
@@ -17,5 +17,6 @@
   "license": "ISC",
   "dependencies": {
     "sean-button": "^4.0.0"
-  }
+  },
+  "gitHead": "/Users/jonelson/Documents/Atlassian/Projects/atlaskit-spike\n"
 }
