refactor(all): change version #'s and names of components
affects: tmp-atlaskit-component-a, tmp-atlaskit-component-b, tmp-atlaskit-component-c, tmp-joschable-header, tmp-joshable-content, tmp-sean-button

--- a/packages/component-a/package.json
+++ b/packages/component-a/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "atlaskit-component-a",
-  "version": "3.17.0",
+  "name": "tmp-atlaskit-component-a",
+  "version": "0.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -13,6 +13,5 @@
     "analyzeCommits": "semantic-release-lerna-analyzer",
     "verifyConditions": [],
     "debug": false
-  },
-  "gitHead": "/Users/jonelson/Documents/Atlassian/Projects/atlaskit-spike\n"
+  }
 }
