--- a/packages/component-c/package.json
+++ b/packages/component-c/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "atlaskit-component-c",
-  "version": "3.4.0",
+  "name": "tmp-atlaskit-component-c",
+  "version": "0.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,5 @@
   "license": "ISC",
   "release": {
     "analyzeCommits": "semantic-release-lerna-analyzer"
-  },
-  "gitHead": "/Users/jonelson/Documents/Atlassian/Projects/atlaskit-spike\n"
+  }
 }
