--- a/packages/joschable-header/package.json
+++ b/packages/joschable-header/package.json
@@ -5,7 +5,7 @@
   "main": "dist/bundle.js",
   "webpack": "src/index.js",
   "scripts": {
-    "prepublish": "cd .. && npm run prepublish/single joschable-header",
+    "prepublish": "cd .. && npm run prepublish/single tmp-joschable-header",
     "pre-release": "lerna-semantic-release pre"
   },
   "files": [
