--- a/packages/joshable-content/package.json
+++ b/packages/joshable-content/package.json
@@ -5,7 +5,7 @@
   "main": "dist/bundle.js",
   "webpack": "src/index.js",
   "scripts": {
-    "prepublish": "cd .. && npm run prepublish/single joshable-content",
+    "prepublish": "cd .. && npm run prepublish/single tmp-joshable-content",
     "pre-release": "lerna-semantic-release pre"
   },
   "files": [
