--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "less-loader": "^2.2.3",
     "mocha": "^2.4.5",
     "precommit-hook": "^3.0.0",
+    "raw-loader": "^0.5.1",
     "semantic-release": "6.2.2",
     "style-loader": "^0.13.1",
     "validate-commit-message": "^3.0.1",
