--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,7 +9,7 @@ pipelines:
             #- npm test
             - npm set //registry.npmjs.org/:_authToken=$NPM_TOKEN
             - npm run release
-            - ./build/bin/hipchat_message.sh "(package) Released new AtlasKit canary"
+            - [ -f .released-packages ] && cat .released-packages | sed 's/^/Released /' | ./build/bin/hipchat_message.sh || return 0
   default:
     - step:
         script:
