--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -4,6 +4,7 @@ pipelines:
     master:
       - step:
           script:
+            - bash -c "git remote set-url origin https://${BITBUCKET_USER}:${BITBUCKET_PASSWORD}@bitbucket.org//atlassian/atlaskit-spike.git/"
             - npm install
             - npm run lint
             #- npm test
