--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,6 +6,7 @@ pipelines:
           script:
             - bash -c "git remote set-url origin https://"$BITBUCKET_USER":"\'$BITBUCKET_PASSWORD\'"@bitbucket.org/atlassian/atlaskit-spike.git/"
             - bash -c "git fetch --tags"
+            - bash -c "git tag --list" #debug
             - npm install
             - npm run lint
             #- npm test
