--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,8 +5,8 @@ pipelines:
       - step:
           script:
             - bash -c "git remote set-url origin https://"$BITBUCKET_USER":"\'$BITBUCKET_PASSWORD\'"@bitbucket.org/atlassian/atlaskit-spike.git/"
-            - bash -c "git config --global user.email "aui-team@atlassian.com""
-            - bash -c "  git config --global user.name "AUI team account"
+            - bash -c "git config --global user.email 'aui-team@atlassian.com'"
+            - bash -c "git config --global user.name 'AUI team account'"
             - bash -c "git fetch --tags"
             - bash -c "git tag --list" #debug
             - npm install
