--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "karma-mocha": "^1.0.1",
     "karma-sauce-launcher": "1.0.0",
     "karma-webpack": "^1.7.0",
-    "lerna": "joscha/lerna#atlaskit",
+    "lerna": "2.0.0-beta.13",
     "lerna-semantic-release": "0.4.2",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
