--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint .",
     "postinstall": "./node_modules/.bin/lerna bootstrap && validate-commit-msg",
     "prepublish/single": "./build/bin/prepublish.single.sh",
-    "release": "lerna run pre-release && lerna-semantic-release perform",
+    "release": "lerna run pre-release --concurrency 1 && lerna-semantic-release perform",
     "release/announce": "[ -s .released-packages ] && cat .released-packages | sed 's/^/Released /' | xargs ./build/bin/hipchat_message.sh || return 0",
     "test": "./build/bin/test.sh",
     "test/saucelabs": "./build/bin/test.saucelabs.sh",
@@ -44,7 +44,7 @@
     "karma-mocha": "^1.0.1",
     "karma-sauce-launcher": "1.0.0",
     "karma-webpack": "^1.7.0",
-    "lerna": "2.0.0-beta.13",
+    "lerna": "jpnelson/lerna#config-concurrency",
     "lerna-semantic-release": "0.4.2",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
