--- a/packages/component-c/package.json
+++ b/packages/component-c/package.json
@@ -10,8 +10,5 @@
     "lodash": "*"
   },
   "author": "",
-  "license": "ISC",
-  "release": {
-    "analyzeCommits": "semantic-release-lerna-analyzer"
-  }
+  "license": "ISC"
 }
