chore(build): add post release steps

--- a/packages/component-a/package.json
+++ b/packages/component-a/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "pre-release": "lerna-semantic-release pre"
+    "pre-release": "lerna-semantic-release pre",
+    "post-release": "lerna-semantic-release post"
   },
   "author": "",
   "license": "ISC",
