chore: rename dev-server into dev

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "./node_modules/.bin/lerna exec -- rm -rf node_modules dist && rm -rf node_modules",
     "dist": "./node_modules/.bin/lerna run prepublish",
-    "dev-server/single": "./build/bin/dev.server.single.sh",
+    "dev/single": "./build/bin/dev.single.sh",
     "lint": "eslint .",
     "postinstall": "./node_modules/.bin/lerna bootstrap && validate-commit-msg",
     "prepublish/single": "./build/bin/prepublish.single.sh",
