chore(all): bump to 1.0 of lerna-semantic-release
affects: atlas-animation, atlas-animation2, tmp-atlaskit-component-a, tmp-atlaskit-component-b, tmp-atlaskit-component-c, tmp-joschable-header, tmp-joshable-content, tmp-sean-button, treyflipped-button

--- a/packages/treyflipped-button/package.json
+++ b/packages/treyflipped-button/package.json
@@ -5,9 +5,7 @@
   "main": "dist/bundle.js",
   "webpack": "src/index.js",
   "scripts": {
-    "prepublish": "cd .. && npm run prepublish/single treyflipped-button",
-    "pre-release": "lerna-semantic-release pre",
-    "post-release": "lerna-semantic-release post"
+    "prepublish": "cd .. && npm run prepublish/single treyflipped-button"
   },
   "files": [
     "dist"
