--- a/packages/sean-button/package.json
+++ b/packages/sean-button/package.json
@@ -5,9 +5,7 @@
   "main": "dist/bundle.js",
   "webpack": "src/index.js",
   "scripts": {
-    "prepublish": "cd .. && npm run prepublish/single tmp-sean-button",
-    "pre-release": "lerna-semantic-release pre",
-    "post-release": "lerna-semantic-release post"
+    "prepublish": "cd .. && npm run prepublish/single tmp-sean-button"
   },
   "files": [
     "dist"
