chore(build): removed unneeded steps
affects: atlas-animation, atlas-animation2

--- a/packages/atlas-animation2/package.json
+++ b/packages/atlas-animation2/package.json
@@ -5,8 +5,7 @@
   "main": "dist/bundle.js",
   "webpack": "src/index.js",
   "scripts": {
-    "prepublish": "cd .. && npm run prepublish/single atlas-animation2",
-    "pre-release": "lerna-semantic-release pre"
+    "prepublish": "cd .. && npm run prepublish/single atlas-animation2"
   },
   "files": [
     "dist"
