--- a/packages/atlas-animation/package.json
+++ b/packages/atlas-animation/package.json
@@ -5,8 +5,7 @@
   "main": "dist/bundle.js",
   "webpack": "src/index.js",
   "scripts": {
-    "prepublish": "cd .. && npm run prepublish/single atlas-animation",
-    "pre-release": "lerna-semantic-release pre"
+    "prepublish": "cd .. && npm run prepublish/single atlas-animation"
   },
   "files": [
     "dist"
