--- a/package.json
+++ b/package.json
@@ -76,9 +76,9 @@
     "lint": "eslint .",
     "postinstall": "./node_modules/.bin/lerna bootstrap && validate-commit-msg",
     "prepublish/single": "./build/bin/prepublish.single.sh",
-    "release": "lerna run pre-release --concurrency 1 && lerna-semantic-release perform",
+    "release": "lerna-semantic-release pre && lerna-semantic-release perform",
     "release/announce": "[ -s .released-packages ] && cat .released-packages | sed 's/^/Released /' | xargs ./build/bin/hipchat_message.sh || return 0",
-    "release/changelog": "if [ -s .released-packages ]; then lerna run post-release && ./build/bin/push-changelogs.sh; else return 0; fi",
+    "release/changelog": "if [ -s .released-packages ]; then lerna-semantic-release post; else return 0; fi",
     "test": "./build/bin/test.sh",
     "test/saucelabs": "./build/bin/test.saucelabs.sh",
     "test/saucelabs/ci": "./build/bin/test.saucelabs.ci.sh",
