--- a/packages/atlas-animation3/package.json
+++ b/packages/atlas-animation3/package.json
@@ -18,5 +18,11 @@
     "skatejs": "skatejs/skatejs#85dfbcbf7a7bb53d709719639ca7414b37769861",
     "skatejs-named-slots": "^0.1.5",
     "web-animations-js": "^2.2.1"
+  },
+  "devDependencies": {
+    "immutable": "^3.8.1",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-web-animation": "0.0.12"
   }
 }
